@@ -1,3 +1,15 @@
+2012-11-21  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r135409.
+        http://trac.webkit.org/changeset/135409
+        https://bugs.webkit.org/show_bug.cgi?id=102959
+
+        This patch causes compiling error to Chromium build (Requested
+        by jianli_ on #webkit).
+
+        * tests/IDBRequestTest.cpp:
+        (WebCore::TEST):
+
 2012-11-21  Kevin Ellis  <kevers@chromium.org>
 
         [chromium] Add flag to enable/disable touch adjustment at runtime.
